<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlphaWeather</string>
    <string name="action_settings">Settings</string>
    <string name="textLat">textLat</string>
    <string name="textLong">textLong</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="city">city, state</string>
    <string name="day">day</string>
    <string name="description">description</string>
    <string name="temperature">75ºF</string>

    <string name="title_activity_settings">Settings</string>


    <string name="pref_title_temperature_preferences">Temperature in Celsius</string>
    <string name="pref_description_temp">When selected, temperature displays in Celsius</string>

    <string name="zip_code">Display zip code</string>
    <string name="pref_default_display_zip_code"></string>

    <string name="pref_title_sync_frequency">Weather Update Frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>180</item>
    </string-array>

    <string name="forecast_display_days">Days to display</string>
    <string-array name="forecast_days_list">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
    </string-array>
    <string-array name="forecast_days_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
