<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFFFF" >

    <ListPreference
        android:key="forecastdays_user"
        android:title="@string/forecast_display_days"
        android:entries="@array/forecast_days_list"
        android:entryValues="@array/forecast_days_values"
        android:defaultValue="3"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <CheckBoxPreference
        android:key="temp_preference_user"
        android:title="@string/pref_title_temperature_preferences"
        android:summary="@string/pref_description_temp"
        android:defaultValue="false" />

    <EditTextPreference
        android:key="zipcode_user"
        android:title="@string/zip_code"
        android:defaultValue="@string/pref_default_display_zip_code"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLength="5"
        android:maxLines="1" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:key="update_frequency_user"
        android:title="@string/pref_title_sync_frequency"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:defaultValue="180"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>